--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "NODE_ENV=production webpack"
+    "build": "NODE_ENV=production webpack",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "@types/webpack": "4.41.2",
     "clean-webpack-plugin": "3.0.0",
+    "copy-webpack-plugin": "5.1.1",
+    "gh-pages": "2.2.0",
     "html-webpack-plugin": "3.2.0",
     "ts-loader": "6.2.1",
     "typescript": "3.7.4",
