Updated names & versions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "barcode",
-  "version": "0.0.1",
+  "name": "es-barcodes",
+  "version": "1.0.1",
   "description": "An experimental set of modules for rendering bar-codes",
   "author": "Sanich Kotikov <sancho@cdrpro.ru> (https://sanichkotikov.github.io)",
   "license": "MIT",
@@ -25,10 +25,10 @@
   "dependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SanichKotikov/barcode.git"
+    "url": "git+https://github.com/SanichKotikov/es-barcodes.git"
   },
   "bugs": {
-    "url": "https://github.com/SanichKotikov/barcode/issues"
+    "url": "https://github.com/SanichKotikov/es-barcodes/issues"
   },
-  "homepage": "https://github.com/SanichKotikov/barcode"
+  "homepage": "https://github.com/SanichKotikov/es-barcodes"
 }
