--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "es-barcodes",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "An experimental set of modules for rendering bar-codes",
   "author": "Sanich Kotikov <sancho@cdrpro.ru> (https://sanichkotikov.github.io)",
   "license": "MIT",
   "scripts": {
+    "test": "cd ./packages/ean && npm test",
     "start": "webpack-dev-server",
     "build": "NODE_ENV=production webpack",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
+    "@types/jest": "24.9.1",
     "@types/webpack": "4.41.2",
     "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "5.1.1",
