--- a/packages/ean/tsconfig.json
+++ b/packages/ean/tsconfig.json
@@ -6,6 +6,7 @@
     "moduleResolution": "node",
     "lib": ["es6"],
     "outDir": "lib",
+    "esModuleInterop": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "downlevelIteration": true,
@@ -22,5 +23,9 @@
   },
   "include": [
     "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.test.ts"
   ]
 }
